[package]
name = "rjit-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
paste = "1.0.14"
quote = "1.0.32"
rjit = { path = "../cuda-test" }

[build-dependencies]
enum-iterator = "1.4.1"
