[package]
name = "rjit-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
paste = "1.0.14"
pretty_env_logger = "0.5.0"
quote = "1.0.32"
# rjit = { git = "https://github.com/DoeringChristian/rjit.git" }
rjit = { path = "../rjit" }

[build-dependencies]
enum-iterator = "1.4.1"
